1. Метод .of [#343594]